# skewt_server

./: .dockerignore  .gitignore  AGENTS.md  Caddyfile  Dockerfile  IN-PROGRESS.md  README.md  docker-compose.caddy.yml  docker-compose.ftp-wireguard.yml.example  docker-compose.yml  pyproject.toml  site-config.yml
app/: globus_transfer.py  processor.py  site_config.py  smtp_ingest.py  web.py
config/: wireguard-ftp.env.example
docs/: jetstream2-deployment.md  lightsail-deployment.md  wireguard-ftp-setup.md
scripts/: entrypoint.sh  install_wireguard_host.sh  reset_data.sh
static/: styles.css
templates/: index.html
